src/autoindex.scss
@import 'mixins';
@import 'vars';

* {
    box-sizing: border-box;
}

html {
    min-height: 100%;
    font-weight: 400;
    font-size: 14px;
    font-family: "Open Sans", sans-serif;
    line-height: 1.7em;
    background-color: $gray1;
    color: $gray3;
    @include dark-mode() {
        background-color: $dkgray1;
        color: $dkgray3;
    }
}

a {
    text-decoration: none;
}

a,
img {
    border: none;
    outline: none;
}

body {
    padding: 20px;
    @include small-screen() {
        padding: 10px;
    }
}

#indextitle,
#indexlist {
    margin: 1em auto;
    max-width: 95%;
    width: 900px;
}

#indextitle {
    padding-bottom: 1em;
    border-bottom: $gray4-border;
    color: $gray5;
    @include dark-mode() {
        border-bottom: $dkgray4-border;
        color: $dkgray5;
    }
}

#indexlist {
    border-collapse: separate;
    border-radius: 0.25rem;
    border-spacing: 0;
    box-shadow: none;
    border: $gray4-border;
    background-color: $gray0;
    @include dark-mode() {
        border: $dkgray4-border;
        background-color: $dkgray0;
    }

    a {
        color: $gray3;
        @include dark-mode() {
            color: $dkgray3;
        }

        &:hover,
        &:focus,
        &:active {
            color: $gray5;
            @include dark-mode() {
                color: $dkgray5;
            }

            img {
                opacity: 0.4;
            }
        }

    }

    tr {

        &:first-child {
            td,
            th {
                border-top: none;
            }
        }

        &:last-child {
            td,
            th {
                border-bottom: none;
            }
        }

        td:first-child,
        th:first-child {
            border-left: none;
        }

        td:last-child,
        th:last-child {
            border-right: none;
        }

        // Hide huge bars
        &.indexbreakrow {
            display: none;
        }

        // Row styling
        &.even td {
            background-color: $gray0;
            @include dark-mode() {
                background-color: $dkgray0;
            }
        }
        &.odd td {
            background-color: $gray1;
            @include dark-mode() {
                background-color: $dkgray1;
            }
        }

    }

    th, td {
        transition: background 0.2s ease, border-color 0.2s ease, color 0.2s ease;
        text-align: left;
        vertical-align: middle;
        padding: 0.4em 0.6em;

        @if $internal-borders {
            border-top: $gray4-border;
            @include dark-mode() {
                border-top: $dkgray4-border;
            }
        }

        &.indexcolicon {
            padding-bottom: 0;
            padding-right: 0;
            padding-top: 0;
            text-align: center;
            width: 32px;
        }

        &:not(.indexcolname) {
            border-left: $gray4-border;
            @include dark-mode() {
                border-left: $dkgray4-border;
            }
        }

        @include small-screen() {
            &.indexcollastmod {
                display: none;
            }
        }

        // make links fill up the whole table cell
        a {
            display: block;
            width: 100%;
            height: 100%;
        }
    }

    th {
        font-weight: 700;
        // vertical-align: middle;
        padding-top: 0.7em;
        padding-bottom: 0.7em;
        // text-align: left;
        @if not $internal-borders {
            border-bottom: $gray4-border;
            @include dark-mode() {
                border-bottom: $dkgray4-border;
            }
        }

        background-color: $gray2;
        color: $gray5;
        @include dark-mode() {
            background-color: $dkgray2;
            color: $dkgray5;
        }

        &:hover {
            background-color: $gray4;
            @include dark-mode() {
                background-color: $dkgray4;
            }
        }
    }

}

